Adding Routing and components

--- a/properties-client/src/app/app.component.html
+++ b/properties-client/src/app/app.component.html
@@ -1,7 +1,9 @@
 <app-header></app-header>
 
-<app-properties></app-properties>
+<div class="container">
+
+    <router-outlet></router-outlet>
+    
+</div>
 
 <app-footer></app-footer>
-
-<router-outlet></router-outlet>
