--- a/properties-client/src/app/components/about/about.component.html
+++ b/properties-client/src/app/components/about/about.component.html
@@ -1,4 +1,4 @@
-<h1>About the coding exercise</h1>
+<h1 class="display-4">About the coding exercise</h1>
 <hr>
 <p>The exercise was built in two simple projects as WebAPI (NetCore 3.1) and UI-Client (Angular 11). Regarding to the WebApi was split into two layers/projects: roofstock.Api and roofstock.Data. In the roofstock.Api I register the services using DependencyInjection and provided a couple of extension methods to register the DbContext from roofstock.Data and the AutoMapper custom configuration which is how I communicate between layers. The DbContext uses EFCore with LINQ and CodeFirst strategy for the database creation. For consuming the external file from the API provided in the requirement I used the Adapter patter to convert the data.</p>
 <div class="text-center">
